--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.lr</groupId>
-    <artifactId>sjblog-sso</artifactId>
+    <artifactId>sjsite-sso</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <name>sjblog-admin</name>
+    <name>sjsite-sso</name>
     <packaging>war</packaging>
     <!-- FIXME change it to the project's website -->
     <url>http://www.example.com</url>
