--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,7 +1,7 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:3306/sjblog_admin?useUnicode=true&characterEncoding=UTF-8
+jdbc.url=jdbc:mysql://47.101.35.22:3306/sso?useUnicode=true&characterEncoding=UTF-8
 jdbc.username=root
-jdbc.password=
+jdbc.password=Admin1234.
 druid.pool.size.max=20
 druid.pool.size.min=3
 druid.pool.size.init=3
