--- a/src/main/resources/redis.properties
+++ b/src/main/resources/redis.properties
@@ -1,7 +1,7 @@
-redis.host=127.0.0.1
+redis.host=47.101.35.22
 redis.port=6379
 redis.sentinel.port=26879
-redis.pwd=
+redis.pwd=admin1234
 redis.database=0
 redis.timeout=1000
 redis.userPool=true
